--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -12,7 +12,7 @@ two:
   image_url: lorem.jpg
   price: 9.99
 
-ruby:
+testFictures:
   title: Programming Ruby 1.9
   description: Ruby is the fastest growing and the most exciting and dynamic language out there. If you need to working programs delivered fast, you should add Ruby to your toolbox.
   price: 49.50
