--- a/test/fixtures/orders.yml
+++ b/test/fixtures/orders.yml
@@ -2,12 +2,12 @@
 
 one:
   name: Dave Thomas
-  adress: MyText
+  address: MyText
   email: dave@example.com
   pay_type: Check
 
 two:
   name: MyString
-  adress: MyText
+  address: MyText
   email: MyString
   pay_type: 1
